RESOLVED FIXED286406
[Skia, cairo] TestWebCore.ImageBufferTests.ImageBufferSubPixelDrawing fails
https://bugs.webkit.org/show_bug.cgi?id=286406
Summary [Skia, cairo] TestWebCore.ImageBufferTests.ImageBufferSubPixelDrawing fails
Fujii Hironori
Reported 2025-01-22 20:53:24 PST
[Win] TestWebCore.ImageBufferTests.ImageBufferSubPixelDrawing fails > python .\Tools\Scripts\run-api-tests --debug --no-build TestWebCore.ImageBufferTests.* TestWebCore.ImageBufferTests.ImageBufferSubPixelDrawing C:\webkit\wb\Tools\TestWebKitAPI\Tests\WebCore\ImageBufferTests.cpp:159 Value of: imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.minXMinYCorner() + FloatPoint(1, 1)) Actual: false (color is not expected at (2.50,2.50). Got: #00000000, expected: #00FF00.) Expected: true C:\webkit\wb\Tools\TestWebKitAPI\Tests\WebCore\ImageBufferTests.cpp:160 Value of: imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.maxXMinYCorner() + FloatPoint(-1, 1)) Actual: false (color is not expected at (389.50,2.50). Got: #00000000, expected: #00FF00.) Expected: true C:\webkit\wb\Tools\TestWebKitAPI\Tests\WebCore\ImageBufferTests.cpp:161 Value of: imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.minXMaxYCorner() + FloatPoint(1, -1)) Actual: false (color is not expected at (2.50,41.50). Got: #00000000, expected: #00FF00.) Expected: true C:\webkit\wb\Tools\TestWebKitAPI\Tests\WebCore\ImageBufferTests.cpp:162 Value of: imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.maxXMaxYCorner() + FloatPoint(-1, -1)) Actual: false (color is not expected at (389.50,41.50). Got: #00000000, expected: #00FF00.) Expected: true C:\webkit\wb\Tools\TestWebKitAPI\Tests\WebCore\ImageBufferTests.cpp:164 Value of: imageBufferPixelIs(Color::green, *backImageBuffer, fillRect.minXMinYCorner() + FloatPoint(1, 1)) Actual: false (color is not expected at (2.50,2.50). Got: #00000000, expected: #00FF00.) Expected: true C:\webkit\wb\Tools\TestWebKitAPI\Tests\WebCore\ImageBufferTests.cpp:165 Value of: imageBufferPixelIs(Color::green, *backImageBuffer, fillRect.maxXMinYCorner() + FloatPoint(-1, 1)) Actual: false (color is not expected at (389.50,2.50). Got: #00000000, expected: #00FF00.) Expected: true (...)
Attachments
Fujii Hironori
Comment 1 2025-01-22 22:09:37 PST
EWS
Comment 2 2025-01-26 23:01:04 PST
Committed 289415@main (3b5561ce3cda): <https://commits.webkit.org/289415@main> Reviewed commits have been landed. Closing PR #39435 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-26 23:02:14 PST
Note You need to log in before you can comment on or make changes to this bug.