[Skia][cairo] TestWebCore.ImageBufferTests.ImageBufferSubPixelDrawing fails https://bugs.webkit.org/show_bug.cgi?id=286406

Reviewed by Carlos Garcia Campos.

TestWebCore.ImageBufferTests.ImageBufferSubPixelDrawing was failing
for Skia and cairo ports because the device scale factor wasn't
applied to ImageBuffer.

Windows Skia port was freezing while destroying skiaGLContext now. It
doesn's support accelerated image buffer yet. Disabled skiaGLContext
for now.

The tests are skipped for GTK and WPE ports now. <https://webkit.org/b/286456>
Only tested with Windows Cairo and Windows Skia ports.

* Source/WebCore/platform/graphics/cairo/ImageBufferCairoSurfaceBackend.cpp:
(WebCore::ImageBufferCairoSurfaceBackend::ImageBufferCairoSurfaceBackend):
* Source/WebCore/platform/graphics/skia/ImageBufferSkiaSurfaceBackend.cpp:
(WebCore::ImageBufferSkiaSurfaceBackend::ImageBufferSkiaSurfaceBackend):
* Source/WebCore/platform/graphics/skia/PlatformDisplaySkia.cpp:
(WebCore::PlatformDisplay::skiaGLContext):
* Tools/TestWebKitAPI/CMakeLists.txt:
* Tools/TestWebKitAPI/WebCoreTestUtilities.cpp:
* Tools/TestWebKitAPI/glib/TestExpectations.json:

Canonical link: https://commits.webkit.org/289415@main